make web service interactive

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "3000:3000"
     volumes:
       - .:/app
+    stdin_open: true
+    tty: true
     environment:
       - DATABASE_URL=postgres://postgres:password@db
     depends_on:
