--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.9"
 services:
   web:
     build: .
-    dockerfile: Dockerfile.dev
+    entrypoint: /app/bin/entrypoint.sh
+    command: ["rails", "server", "-b", "0.0.0.0"]
     ports:
       - "3000:3000"
     volumes:
