--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   web:
     build: .
-    entrypoint: ./bin/entrypoint.sh
+    entrypoint: ./entrypoint.sh
     command: ["rails", "server", "-b", "0.0.0.0"]
     ports:
       - "3000:3000"
