--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.9"
 services:
   web:
-    build: .
-    entrypoint: ./entrypoint.sh
-    command: ["rails", "server", "-b", "0.0.0.0"]
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     volumes:
