--- a/db/data/errors.yml
+++ b/db/data/errors.yml
@@ -23,8 +23,8 @@
   resolver: |
     ###### In restaurants/index.html.erb
     ```erb
-    <% @restaurants.each do |restaurant|
-    ^^^^^^^^^^^^
+    <% @restaurants.each do |restaurant| %>
+    #  ^^^^^^^^^^^^
     <!-- [...] -->
     ```
     ###### In restaurants_controller.rb
