--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,7 +8,7 @@ COPY . /app/
 COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
 
-RUN bundle install
+RUN bundle install && rm tmp/pids/server.pid
 
 ENTRYPOINT ["bin/rails"]
 CMD ["server", "-b", "0.0.0.0"]
