--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
 FROM ruby:3.1.1
 
-RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
+RUN apt-get update -qq && apt-get install -y nodejs postgresql-client nano
 
 WORKDIR /app
 COPY . /app/
@@ -8,7 +8,7 @@ COPY . /app/
 COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
 
-RUN bundle install && rm tmp/pids/server.pid
+RUN bundle install && rm -f tmp/pids/server.pid
 
 ENTRYPOINT ["bin/rails"]
 CMD ["server", "-b", "0.0.0.0"]
